--- a/app/scss/basic.scss
+++ b/app/scss/basic.scss
@@ -35,14 +35,14 @@ img {
   font-weight: bold;
 }
 .button:hover {
-  background: #d73a4a;
-  border: 1px solid #d73a4a;
+  background: #B01122;
+  border: 1px solid #B01122;
   color: #fff;
 }
 
 .button:active {
-  background-color: #b51828;
-  border: 1px solid #b51828;
+  background-color: #9C0717;
+  border: 1px solid #9C0717;
 }
 button {
   background: none;
