IE 11 debug + popup

--- a/app/scss/basic.scss
+++ b/app/scss/basic.scss
@@ -43,6 +43,7 @@ img {
 .button:active {
   background-color: #9C0717;
   border: 1px solid #9C0717;
+  color: #fff;
 }
 button {
   background: none;
