--- a/app/scss/blocks/offer.scss
+++ b/app/scss/blocks/offer.scss
@@ -11,10 +11,6 @@
 }
 
 .offer__top {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
   width: 100%;
   height: 100vh;
   padding: 220px 20px 250px;
@@ -35,7 +31,6 @@
 }
 .offer__link {
   display: inline-block;
-  margin-bottom: 85px;
   padding: 10px 20px;
   background-color: #C50B1E;
   font-size: 16px;
@@ -88,6 +83,7 @@
   stroke-opacity: 0;
 }
 .we-can__item-text {
+  align-self: flex-start;
   color: #000;
   font-weight: normal;
 }
@@ -112,14 +108,14 @@
     padding-right: 40px;
   }
   .offer__top {
-    height: 45%;
+    height: 30%;
     padding: 0;
-    padding-top: 80px;
     margin: 0;
+    margin-top: 80px;
     background: none;
   }
   .offer__bottom {
-    height: 50%;
+    height: 35%;
     margin: 0;
     padding: 0;
     padding-top: 20px;
@@ -130,7 +126,6 @@
   }
   .offer__title {
     max-width: 600px;
-    margin-top: 100px;
     margin-bottom: 40px;
     color: #fff;
     font-size: 46px;
@@ -140,8 +135,8 @@
   }
 
   .offer__link {
+    display: block;
     display: inline-block;
-    margin-bottom: 85px;
     padding: 10px 20px;
     font-size: 16px;
     line-height: 18px;
@@ -163,7 +158,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-beetween;
-    margin-top: 20px;
   }
 
   .we-can__item {
@@ -186,6 +180,7 @@
   }
 
   .we-can__item-text {
+    align-items: flex-start;
     color: #fff;
   }
 
@@ -196,11 +191,14 @@
     height: 100vh;
     margin: 0 auto;
     padding-left: 100px;
-    padding-top: 140px;
+    padding-top: 80px;
     padding-right: 40px;
   }
+  .offer__top {
+    height: 40%;
+  }
   .we-can {
-    margin-top: 60px;
+    display: flex;
   }
   .we-can__item {
     width: 33%;
@@ -229,11 +227,11 @@
     height: 100vh;
     margin: 0 auto;
     padding-left: 155px;
-    padding-top: 100px;
+    padding-top: 80px;
     padding-right: 55px;
   }
-  .offer__title {
-    margin-top: 200px;
+  .offer__top {
+    height: 50%;
   }
   .offer-mobile__title {
     display: none;
@@ -242,7 +240,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-beetween;
-    margin-top: 100px;
+
   }
 
   .we-can__item {
