--- a/app/scss/blocks/page-header.scss
+++ b/app/scss/blocks/page-header.scss
@@ -50,7 +50,7 @@
 }
 
 .sticked {
-  background-color: #eee;
+  background-color: #fff;
   position: fixed;
   top: 0;
   width: 100%;
@@ -121,8 +121,20 @@
     50% {
       background-color: transparent;
     }
-    100% {
+    60% {
+      background-color: transparent;
+    }
+    70% {
+      background-color: transparent;
+    }
+    80% {
+      background-color: transparent;
+    }
+    90% {
       background-color: #fff;
+    }
+    100% {
+      background-color: transparent;
     }
   }
   @keyframes bgfillback {
