--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,7 +10,9 @@
 @import 'blocks/advantages';
 @import 'blocks/reviews';
 @import 'blocks/contacts';
-@import 'blocks/page-footer';
+@import 'blocks/popup';
+@import 'blocks/legalpage';
+@import 'blocks/legal';
 
 
 
