--- a/app/scss/blocks/popup.scss
+++ b/app/scss/blocks/popup.scss
@@ -2,15 +2,21 @@
   position: fixed;
   top: 0;
   right: 0;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
   padding: 0 20px;
   overflow: scroll;
+  z-index: 1000000;
+}
+.popup.active {
+  display: flex;
 }
 .popup__item {
+  position: relative;
+  display: none;
   width: 100%;
   height: 236px;
   border-radius: 5px;
@@ -37,7 +43,7 @@
   top: 0;
   left: 0;
   display: none;
-  z-index: 10000;
+  z-index: 10000!important;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.9);
@@ -45,7 +51,47 @@
 .popup__overlay--show {
   display: block;
 }
+.popup__close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  display: block;
+  width: 25px;
+  height: 25px;
+  background-color: #fff;
+  
+}
+.popup__btn {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.popup__btn span {
+  position: absolute;
+  left: 0;
+  display: block;
+  width: 22px;
+  height: 3px;
+  background-color: #000;
+  transform: rotate(45deg);
+  transition: all .3s ease;
+}
 
+.popup__btn span:before {
+  position: absolute;
+  left: 0;
+  content: '';
+  display: block;
+  width: 22px;
+  height: 3px;
+  background-color: #000;
+  transform: rotate(90deg);
+  transition: all .3s ease;
+}
+.popup__btn:hover span,
+.popup__btn:hover span:before {
+  background-color: #c50b1e;
+}
 @media (min-width: $tablet-width) {
   .popup__item {
     width: 370px;
