--- a/app/scss/blocks/reviews.scss
+++ b/app/scss/blocks/reviews.scss
@@ -47,7 +47,9 @@
   justify-content: center;
   width: auto;
   margin-bottom: 20px;
+  outline: none;
 }
+
 .review__img {
   width: auto;
   margin: 0 auto;
@@ -96,6 +98,20 @@
 .clients__list {
   width: 100%;
   margin-bottom: 40px;
+}
+.clients__item {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  outline: none;
+  margin: auto;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+.clients__item img {
+  flex-basis: 250px
+  flex-shrink: 0;
+  align-self: flex-end;
 }
 
 @media (min-width: $tablet-width) {
@@ -224,7 +240,7 @@
     width: 1280px;
     margin: 0 auto;
     padding-left: 155px;
-    padding-top: 80px;
+    padding-top: 60px;
     padding-right: 55px;
   }
   .reviews__slider {
