--- a/app/scss/blocks/offer.scss
+++ b/app/scss/blocks/offer.scss
@@ -27,7 +27,7 @@
   color: #fff;
   font-size: 28px;
   line-height: 36px;
-  font-weight: normal;
+  font-weight: bold;
 }
 .offer__link {
   display: inline-block;
@@ -80,13 +80,32 @@
   width: 40px;
   height: 40px;
   fill: #c50b1e;
+  stroke-opacity: 1;
   stroke-width: 1;
+}
+
+.we-can__item:nth-child(2) svg,
+.we-can__item:nth-child(3) svg,
+.we-can__item:nth-child(4) svg,
+.we-can__item:nth-child(5) svg {
   stroke-opacity: 0;
+}
+
+.we-can__item:nth-child(1) svg {
+  stroke: #c50b1e;
+  stroke-opacity: 1;
+  stroke-width: .8;
+}
+.we-can__item:nth-child(6) svg {
+  stroke: #c50b1e;
+  stroke-opacity: 1;
 }
 .we-can__item-text {
   align-self: flex-start;
   color: #000;
   font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
 }
 
 @media (min-width: $tablet-width) {
@@ -127,7 +146,7 @@
   }
   .offer__title {
     max-width: 600px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     color: #fff;
     font-size: 46px;
     line-height: 54px;
@@ -166,6 +185,7 @@
     width: 255px;
     display: flex;
     align-items: center;
+    padding: 0;
     margin-bottom: 40px;
     color: #fff;
   }
@@ -173,17 +193,36 @@
   .we-can__item svg {
     flex-basis: 60px;
     align-self: flex-start;
-    width: 45px;
-    height: 45px;
+    width: 44px;
+    height: 44px;
     margin-right: 20px;
     margin-bottom: 10px;
     fill: #fff;
+    // stroke: transparent;
+    stroke-width: 1;
     stroke-opacity: 1;
   }
-
+  .we-can__item:nth-child(2) svg,
+  .we-can__item:nth-child(3) svg,
+  .we-can__item:nth-child(4) svg,
+  .we-can__item:nth-child(5) svg {
+    stroke-opacity: 1;
+  }
+  .we-can__item:nth-child(1) svg {
+    stroke: #fff;
+    stroke-opacity: 0;
+    stroke-width: .9;
+  }
+  .we-can__item:nth-child(6) svg {
+    stroke: #fff;
+    stroke-opacity: 0;
+    stroke-width: .9;
+  }
   .we-can__item-text {
     align-items: flex-start;
     color: #fff;
+    font-size: 16px;
+    line-height: 22px;
   }
 
 }
@@ -199,23 +238,31 @@
   .offer__top {
     height: 40%;
   }
+  .offer__title {
+    margin-bottom: 40px;
+  }
   .we-can {
     display: flex;
   }
   .we-can__item {
-    width: 33%;
+    width: 33.33%;
     display: flex;
     flex-direction: row;
     align-items: center;
     margin-bottom: 40px;
+    padding-right: 10px;
     color: #fff;
   }
    .we-can__item svg {
     align-self: center;
-    width: 60px;
-    height: 50px;
+    width: 44px;
+    height: 44px;
     margin-right: 10px;
+    margin-top: -10px;
     fill: #fff;
+  }
+  .we-can__item:last-child svg {
+    margin-left: 10px;
   }
 }
 @media (min-width: $desctop-width) {
@@ -247,16 +294,15 @@
 
   .we-can__item {
     margin-bottom: 40px;
+    padding-right: 30px;
     color: #fff;
   }
 
   .we-can__item svg {
-    width: 60px;
-    height: 50px;
-    margin-right: 10px;
-    fill: #fff;
-  }
-  .we-can__item svg {
+    width: 44px;
+    height: 44px;
+    margin-top: -5px;
+    margin-right: 15px;
     fill: #fff;
   }
 }
