--- a/app/scss/blocks/popup.scss
+++ b/app/scss/blocks/popup.scss
@@ -16,7 +16,7 @@
 }
 .popup__item {
   position: relative;
-  display: none;
+  display: block;
   width: 100%;
   height: 236px;
   border-radius: 5px;
@@ -42,7 +42,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  display: none;
+  display: block;
   z-index: 10000!important;
   width: 100%;
   height: 100%;
