--- a/app/scss/blocks/reviews.scss
+++ b/app/scss/blocks/reviews.scss
@@ -14,6 +14,7 @@
   width: fit-content;
   order: 0;
   display: inline-block;
+  margin-top: 40px;
   margin-bottom: 40px;
   font-size: 26px;
   line-height: 32px;
@@ -104,16 +105,20 @@
   align-items: flex-end;
   justify-content: center;
   outline: none;
-  margin: auto;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin: 0;
+  width: 250px;
 }
 .clients__item img {
-  flex-basis: 250px
+  width: 200px;
+  height: 100px;
   flex-shrink: 0;
-  align-self: flex-end;
+  align-self: center;
+  margin: 0 auto;
+  padding: 0;
 }
-
+.clients__item:first-child img  {
+  margin-right: 20px;
+}
 @media (min-width: $tablet-width) {
   .reviews {
     width: auto;
@@ -136,14 +141,15 @@
   .reviews__title-mobile {
     display: none;
   }
+
   .reviews__slider {
     position: relative;
     padding: 0;
     background: #fff;
     border-radius: 0;
     margin: 0 auto;
-
   }
+
   .review__slide {
     display: flex!important;
     align-items: flex-start;
@@ -224,11 +230,14 @@
     padding-top: 80px;
     padding-right: 40px;
   }
+  .review__slide {
+    margin-left: 100px;
+  }
   .review__text {
     width: 500px;
   }
   .review__toggle {
-    width: 680px;
+    width: 800px;
   }
 }
 @media (min-width: $desctop-width) {
@@ -258,226 +267,3 @@
     margin-top: 20px;
   }
 }
-
-
-
-
-// .review {
-//   width: 770px;
-// }
-// .reviews__slider {
-//   position: relative;
-//   width: 675px;
-//   margin: 0 auto;
-// }
-// .review__slide {
-//   display: flex!important;
-// }
-// .review__author {
-//   text-align: center;
-//   margin-right: 50px;
-// }
-// .review__img {
-//   width: 90px;
-//   border-radius: 100%;
-//   margin: 0 auto;
-//   margin-bottom: 15px;
-// }
-
-
-
-// .review__text {
-//   width: 500px;
-//   font-size: 16px;
-//   line-height: 22px;
-//   margin-bottom: 30px;
-// }
-
-// .review__name-mobile {
-//   display: none;
-// }
-
-// .review__toggle {
-//   display: flex;
-//   justify-content: flex-end;
-//   align-items: center;
-//   width: 700px;
-//   margin-bottom: 60px;
-// }
-
-// .review__toggle-btn {
-//   background: none;
-//   border: none;
-//   width: 14px;
-//   height: 30px;
-  
-//   &--prev {
-//     margin-right: 15px;
-//     fill: #000;
-//   }
-//   &--next {
-//     margin-left: 0;
-//     fill: #000;
-//   }
-// }
-// .review__toggle-numbers {
-//   font-size: 14px;
-//   color: #565656;
-// }
-
-
-
-
-// .clients__list {
-//   display: flex;
-//   align-items: center;
-//   width: 970px;
-//   list-style: none;
-// }
-// .clients__item {
-//   width: 220px;
-//   margin-right: 20px;
-//   opacity: 1;
-//   transition: all .3 ease;
-// }
-// .clients__item:hover {
-//   opacity: .7;
-// }
-
-// .clients__item img {
-//   max-width: 100%;
-//   height: auto;
-//   margin: auto;
-// }
-
-// .review__name-mobile {
-//   display: none;
-// }
-
-// @media only screen and (min-width : 960px) and (max-width : 1120px) {
-//   .reviews__wrapper {
-//     width: 1024px;
-//     margin: 0 auto;
-//     padding-left: 135px;
-//     padding-top: 30px;
-//     padding-right: 42px;
-//   }
-
-//   .reviews__title {
-//     width: 500px;
-//     margin-bottom: 60px;
-//     font-size: 20px;
-//     line-height: 27px;
-//     font-weight: normal;
-//   }
-//   .review {
-//     width: 670px;
-//   }
-//   .reviews__slider {
-//     position: relative;
-//     width: 675px;
-//     margin: 0;
-//   }
-//   .review__name-mobile {
-//     display: none;
-//   }
-//   .review__toggle {
-//     width: 700px;
-//     padding-right: 25px;
-//   }
-//   .clients__list {
-//     width: 700px;
-//     margin: 0;
-//   }
-//   .review__name-mobile {
-//     display: none;
-//   }
-// }
-// @media only screen and (min-width : 640px) and (max-width : 959px) {
-//   .reviews__wrapper {
-//     display: flex;
-//     flex-direction: column;
-//     width: auto;
-//     padding: 50px 20px 0;
-//   }
-//   .reviews__title-mobile {
-//     order: 0;
-//     width: fit-content;
-//     display: inline-block;
-//     font-size: 26px;
-//     line-height: 32px;
-//     font-weight: normal;
-//   }
-//   .reviews__title-mobile:after {
-//     content: '';
-//     display: block;
-//     width: 100%;
-//     height: 3px;
-//     margin-top: 5px;
-//     margin-bottom: 40px;
-//     background-color: #c50b1e;
-//   }
-//   .reviews__title {
-//     display: none;
-//   }
-//   .reviews__slider {
-//     order: 2;
-//     width: auto;
-//     border-radius: 0 0 10px 10px;
-//     background-color: #f8f8f8;
-//     padding: 20px;
-//     margin-bottom: 50px;
-//   }
-//   .review__toggle {
-//     order: 1;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     width: auto;
-//     margin: 0 auto -12px;
-//     border-radius: 10px 10px 0 0;
-//     background-color: #f8f8f8;
-//     padding: 25px;
-//   }
-//   .reviews__clients {
-//     order: 3;
-//   }
-//   .review__slide {
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     width: auto;
-//   }
-  
-//   .review__author {
-//     width: 280px;
-//     margin: 0;
-//     order: 0;
-//   }
-//   .review__img {
-//     width: auto;
-//     margin: 0 auto;
-//     margin-bottom: 15px;
-    
-//   }
-//   .review__text {
-//     order: 0;
-//     width: 280px;
-
-//   }
-//   .review__name {
-//     display: none;
-//   }
-//   .review__name-mobile {
-//     order: 1;
-//     display: flex;
-//     flex-direction: column;
-//     width: 200px;
-//     margin-bottom: auto;
-//     margin-bottom: 20px;
-//   }
-//   .clients__list {
-//     width: 280px;
-//   }
-// }
-// @media only screen and (min-width : 320px)and (max-width : 639px) {
