--- a/app/scss/blocks/reviews.scss
+++ b/app/scss/blocks/reviews.scss
@@ -113,7 +113,7 @@
   height: 100px;
   flex-shrink: 0;
   align-self: center;
-  margin: 0 auto;
+  margin: auto;
   padding: 0;
 }
 .clients__item:first-child img  {
@@ -231,7 +231,7 @@
     padding-right: 40px;
   }
   .review__slide {
-    margin-left: 100px;
+    margin-left: 80px;
   }
   .review__text {
     width: 500px;
@@ -253,7 +253,7 @@
     padding-right: 55px;
   }
   .reviews__slider {
-    margin-left: 100px;
+    margin-left: 80px;
   }
   .review__text {
     width: 580px;
