--- a/app/scss/blocks/contacts.scss
+++ b/app/scss/blocks/contacts.scss
@@ -71,7 +71,9 @@
 
 label[for=comment] {
   margin-top: 20px;
+  margin-bottom: 20px;
 }
+
 .form__textarea {
   display: block;
   width: 290px;
@@ -93,151 +95,7 @@ label[for=comment] {
 .form__textarea:focus.form__lable {
   color: #c50b1e;
 }
-// Дебаг чекбокса
-// .el-radio,
-// .el-checkbox {
-//   position: relative;
-//   font-size: 100%;
-// }
-// label.el-radio,
-// label.el-checkbox {
-//   display: block;
-//   cursor: pointer;
-// }
-// .el-radio > input[type="radio"],
-// .el-checkbox > input[type="checkbox"] {
-//   display: none;
-// }
-// .el-radio > input[type="radio"][disabled],
-// .el-checkbox > input[type="checkbox"][disabled] {
-//   cursor: not-allowed;
-// }
-// .el-radio > input[type="radio"] + .el-radio-style,
-// .el-checkbox > input[type="checkbox"] + .el-checkbox-style {
-//   position: relative;
-//   display: inline-block;
-//   width: 1.4em;
-//   height: 1.4em;
-//   vertical-align: middle;
-//   cursor: pointer;
-// }
-// .el-radio > input[type="radio"] + .el-radio-style:hover:before,
-// .el-checkbox > input[type="checkbox"] + .el-checkbox-style:hover:before {
-//   border-color: #20a0ff;
-// }
-// .el-radio > input[type="radio"] + .el-radio-style:before,
-// .el-checkbox > input[type="checkbox"] + .el-checkbox-style:before {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   display: inline-block;
-//   width: 1.4em;
-//   height: 1.4em;
-//   content: '';
-//   border: 1px solid #C0CCDA;
-// }
-// .el-radio > input[type="radio"] + .el-radio-style:after,
-// .el-checkbox > input[type="checkbox"] + .el-checkbox-style:after {
-//   position: absolute;
-//   display: none;
-//   content: '';
-// }
-// .el-radio > input[type="radio"][disabled] + .el-radio-style,
-// .el-checkbox > input[type="checkbox"][disabled] + .el-checkbox-style {
-//   cursor: not-allowed;
-//   color: #D3DCE6;
-// }
-// .el-radio > input[type="radio"][disabled] + .el-radio-style:hover,
-// .el-radio > input[type="radio"][disabled] + .el-radio-style:before,
-// .el-radio > input[type="radio"][disabled] + .el-radio-style:after,
-// .el-checkbox > input[type="checkbox"][disabled] + .el-checkbox-style:hover,
-// .el-checkbox > input[type="checkbox"][disabled] + .el-checkbox-style:before,
-// .el-checkbox > input[type="checkbox"][disabled] + .el-checkbox-style:after {
-//   cursor: not-allowed;
-// }
-// .el-radio > input[type="radio"][disabled] + .el-radio-style:hover:before,
-// .el-checkbox > input[type="checkbox"][disabled] + .el-checkbox-style:hover:before {
-//   border: 1px solid #D3DCE6;
-//   animation-name: none;
-// }
-// .el-radio > input[type="radio"][disabled] + .el-radio-style:before,
-// .el-checkbox > input[type="checkbox"][disabled] + .el-checkbox-style:before {
-//   border-color: #D3DCE6;
-// }
-// .el-radio > input[type="radio"]:checked + .el-radio-style:before,
-// .el-checkbox > input[type="checkbox"]:checked + .el-checkbox-style:before {
-//   animation-name: none;
-// }
-// .el-radio > input[type="radio"]:checked + .el-radio-style:after,
-// .el-checkbox > input[type="checkbox"]:checked + .el-checkbox-style:after {
-//   display: block;
-// }
-// .el-radio > input[type="radio"] + .el-radio-style:before {
-//   border-radius: 50%;
-// }
-// .el-radio > input[type="radio"] + .el-radio-style:after {
-//   top: 0.4em;
-//   left: 0.4em;
-//   width: 0.6em;
-//   height: 0.6em;
-//   border-radius: 50%;
-//   background: #20a0ff;
-// }
-// .el-radio > input[type="radio"]:checked + .el-radio-style:before {
-//   border: 1px solid #20a0ff;
-// }
-// .el-radio > input[type="radio"]:checked[disabled] + .el-radio-style:before {
-//   border: 1px solid #b0d7f5;
-// }
-// .el-radio > input[type="radio"]:checked[disabled] + .el-radio-style:after {
-//   background: #b0d7f5;
-// }
-// .el-checkbox > input[type="checkbox"] + .el-checkbox-style:before {
-//   border-radius: 3px;
-// }
-// .el-checkbox > input[type="checkbox"] + .el-checkbox-style:after {
-//   top: 0.15em;
-//   left: 0.5em;
-//   box-sizing: border-box;
-//   width: 0.4em;
-//   height: 0.85em;
-//   transform: rotate(45deg);
-//   border-right: 2px solid #fff;
-//   border-bottom: 2px solid #fff;
-// }
-// .el-checkbox > input[type="checkbox"]:checked + .el-checkbox-style:before {
-//   border: #20a0ff;
-//   background: #20a0ff;
-// }
-// .el-checkbox > input[type="checkbox"]:checked[disabled] + .el-checkbox-style:before {
-//   border: #b0d7f5;
-//   background: #b0d7f5;
-// }
-// /*red theme*/
-//   .el-radio.el-radio-red > input[type="radio"] + label:hover:before,
-//   .el-checkbox.el-checkbox-red > input[type="checkbox"] + label:hover:before,
-//   .el-radio.el-radio-red > input[type="radio"]:checked + label:before,
-//   .el-checkbox.el-checkbox-red > input[type="checkbox"]:checked + label:before {
-//     border-color: #ff4949;
-//   }
-//   .el-checkbox.el-checkbox-red > input[type="checkbox"]:checked + label:before,
-//   .el-radio.el-radio-red > input[type="radio"] + label:after {
-//     background: #ff4949;
-//   }
-//   .el-radio.el-radio-red > input[type="radio"][disabled] + label:hover:before,
-//   .el-checkbox.el-checkbox-red > input[type="checkbox"][disabled] + label:hover:before {
-//     border-color: #D3DCE6;
-//   }
-//   .el-checkbox.el-checkbox-red > input[type="checkbox"]:checked[disabled] + label:before,
-//   .el-radio.el-radio-red > input[type="radio"]:checked[disabled] + label:before {
-//     border-color: #f9b3b3;
-//   }
-//   .el-checkbox.el-checkbox-red > input[type="checkbox"][disabled]:checked + label:before,
-//   .el-radio.el-radio-red > input[type="radio"]:checked[disabled] + label:after {
-//     background: #f9b3b3;
-//   }
 
-// конец
 .form__checkbox {
   display: block;
   width: 100%;
@@ -246,17 +104,17 @@ label[for=comment] {
   margin-bottom: -67px;
 }
 
-
 .form__checkbox + .form__check-lable {
   position: relative;
   margin-top: 50px;
   padding: 0 0 0 25px;
   cursor: pointer;
 }
-.form__checkbox + .form__check-lable:before {
+
+.form__check-lable:before {
   content: '';
   position: absolute;
-  top: 1px;
+  top: 0px;
   left: 0;
   width: 16px;
   height: 16px;
@@ -265,10 +123,10 @@ label[for=comment] {
   border: solid 1px #dddddd;
 }
 
-.form__checkbox + .form__check-lable:after {
+.form__check-lable:after {
   content: '';
   position: absolute;
-  top: 5px;
+  top: 4px;
   left: 1px;
   display: none;
   width: 15px;
@@ -566,12 +424,12 @@ label[for=comment] {
     left: 50%;
     right: 50%;
     display: block;
-    padding: 40px 30px 50px;
+    padding: 30px 15px 20px;
     margin: 0 auto;
-    width: 370px;
+    width: 320px;
     border-radius: 5px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
-    transform: translateX(-185px);
+    transform: translateX(-160px);
     background-color: #fff;
     text-align: left;
     z-index: 5;
@@ -641,7 +499,11 @@ label[for=comment] {
     line-height: 22px;
     color: #000;
   }
-  
+  .form {
+    padding: 30px 40px 50px;
+    width: 370px;
+    transform: translateX(-185px);
+  }
   .social {
     display: flex;
     flex-direction: column;
