--- a/app/scss/blocks/legalpage.scss
+++ b/app/scss/blocks/legalpage.scss
@@ -53,10 +53,10 @@
 .legalpage .menu-btn .burger {
   position: relative;
   display: block;
-  width: 40px;
-  height: 4px;
+  width: 35px;
+  height: 2px;
   background-color: #000;
-  outline: none; 
+  outline: none;
 }
 .legalpage .menu-btn .burger--dark {
   background-color: #000;
@@ -71,9 +71,9 @@
   position: absolute;
   content: '';
   display: block;
-  width: 40px;
-  height: 4px;
-  background-color: inherit;
+  width: 35px;
+  height: 2px;
+  background-color: #000;
   transition: all .3s ease;
 }
 .legalpage .menu-btn .burger:before {
