--- a/app/scss/blocks/popup.scss
+++ b/app/scss/blocks/popup.scss
@@ -5,8 +5,8 @@
   display: none;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  width: 100vh;
+  height: 100vh;
   padding: 0 20px;
   overflow: scroll;
   z-index: 1000000;
