--- a/app/scss/blocks/popup.scss
+++ b/app/scss/blocks/popup.scss
@@ -5,10 +5,10 @@
   display: none;
   align-items: center;
   justify-content: center;
-  width: 100vh;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   padding: 0 20px;
-  overflow: scroll;
+  overflow: auto;
   z-index: 1000000;
 }
 .popup.active {
