--- a/app/scss/blocks/about.scss
+++ b/app/scss/blocks/about.scss
@@ -95,25 +95,26 @@
     padding: 0;
   }
   .about__title {
-    display: block;
-    width: 800px;
-    font-size: 28px;
-    line-height: 38px;
-    margin-bottom: 20px;
-    font-weight: normal;
-    text-align: left;
-  }
-  .about__title:after {
-    content: '';
-    display: block;
-    vertical-align: middle;
-    width: 80px;
-    height: 2px;
-    margin-top: 20px;
-    background-color: #c50b1e;
+    display: none;
+  //   width: 800px;
+  //   font-size: 28px;
+  //   line-height: 38px;
+  //   margin-bottom: 20px;
+  //   font-weight: normal;
+  //   text-align: left;
+  // }
+  // .about__title:after {
+  //   content: '';
+  //   display: block;
+  //   vertical-align: middle;
+  //   width: 80px;
+  //   height: 2px;
+  //   margin-top: 20px;
+  //   background-color: #c50b1e;
   }
   .about__text {
-    font-size: 16px;
+    font-size: 14px;
+    margin-bottom: 0;
   }
   .about__text p {
     margin-bottom: 0;
@@ -131,18 +132,21 @@
   .about__stats p:first-child {
     width: 110px;
   }
+  .about__stats p:last-child {
+    margin-right: 0;
+    width: 100px;
+  }
   .about__stats span {
     display: block;
     margin-bottom: 5px;
-    font-size: 36px;
-    line-height: 47px;
+    font-size: 30px;
+    line-height: 35px;
   }
 
   .about__link {
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 0;
     display: inline-block;
-    margin-bottom: 85px;
     padding: 10px 20px;
     background-color: #c50b1e;
     font-size: 16px;
@@ -170,16 +174,44 @@
     width: 1024px;
     margin: 0 auto;
     padding-left: 100px;
-    padding-top: 140px;
+    padding-top: 80px;
     padding-right: 40px;
+  }
+  .about__left-col {
+    width: 55%;
+    margin: 0;
+    padding: 0;
+    margin-right: 30px;
+  }
+  .about__right-col {
+    width: 40%;
+    padding-left: 0;
+  }
+  .about__text {
+    font-size: 14px;
+    padding: 0;
+
   }
   p.about__text-header {
     display: block;
     margin-bottom: 20px;
   }
   .about__stats p {
-    width: 140px;
-    margin-right: 10px;
+    width: 115px;
+    margin-right: 13px;
+    text-align: left;
+    font-size: 14px;
+    line-height: 19px;
+  }
+  .about__stats p:last-child {
+    margin-right: 0;
+  }
+
+  .about__stats span {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 30px;
+    line-height: 35px;
   }
 }
 @media (min-width: $desctop-width) {
@@ -192,7 +224,7 @@
     width: 1280px;
     margin: 0 auto;
     padding-left: 155px;
-    padding-top: 80px;
+    padding-top: 100px;
     padding-right: 55px;
   }
   .about__left-col {
@@ -200,15 +232,17 @@
     margin-right: 0;
   }
   .about__right-col {
-    width: 50%;
-    padding-left: 40px;
+    width: 45%;
+    padding-left: 0;
   }
 
   .about__text {
-    font-size: 14px;
+    font-size: 16px;
   }
+
   .about__stats p {
-    margin-right: 20px;
+    width: 130px;
+    margin-right: 22px;
     text-align: left;
     font-size: 14px;
     line-height: 19px;
@@ -216,7 +250,7 @@
   .about__stats span {
     display: block;
     margin-bottom: 5px;
-    font-size: 30px;
-    line-height: 41px;
+    font-size: 36px;
+    line-height: 47px;
   }
 }
