--- a/app/scss/blocks/contacts.scss
+++ b/app/scss/blocks/contacts.scss
@@ -320,6 +320,7 @@ label[for=comment] {
     padding-left: 100px;
     padding-top: 100px;
     padding-right: 40px;
+    padding-bottom: 0;
   }
   .contacts__form {
     position: static;
@@ -354,11 +355,8 @@ label[for=comment] {
   }
   .social__private {
     position: relative;
-    padding-top: 100px;
+    padding-top: 28px;
     z-index: 3;
-  }
-  .social__private a {
-  
   }
 }
 
@@ -389,16 +387,11 @@ label[for=comment] {
     margin: auto;
     width: 50%;
     z-index: 1;
-    padding-bottom: 10px;
   }
-  .contacts__title {
-    display: block; 
-    margin-bottom: 25px;
-    font-size: 28px;
-    line-height: 38px;
-    font-weight: normal;
+  .contacts__map img {
+    height: auto;
+    width: auto;
   }
-
   .contacts__text {
     width: 250px;
     margin-bottom: 30px;
@@ -425,7 +418,7 @@ label[for=comment] {
 
   .form {
     position: absolute;
-    top: 185px;
+    top: 125px;
     left: 50%;
     right: 50%;
     display: block;
@@ -440,10 +433,11 @@ label[for=comment] {
     z-index: 5;
   }
   .social__private {
-    padding-top: 150px
+    padding-top: 140px
   }
   .social__private a {
     margin-right: 20px;
+    margin-bottom: 60px;
   }
 }
 @media (min-width: $desctop-width) {
@@ -459,7 +453,7 @@ label[for=comment] {
     width: 1280px;
     margin: 0 auto;
     padding-left: 155px;
-    padding-top: 100px;
+    padding-top: 140px;
     padding-right: 55px;
   }
   .contacts__map {
@@ -471,7 +465,6 @@ label[for=comment] {
     margin: auto;
     width: 50%;
     height: 100%;
-    padding-bottom: 45px;
   }
   .contacts__title { 
     margin-bottom: 75px;
@@ -540,10 +533,11 @@ label[for=comment] {
   .social__private {
     margin: 0;
     margin-top: 0;
-    padding-top: 230px;
+    padding-top: 180px;
   }
   .social__private a {
     display: inline-block;
     color: #000;
+    margin-bottom: 0;
   }
 }
