--- a/app/scss/blocks/offer.scss
+++ b/app/scss/blocks/offer.scss
@@ -131,15 +131,15 @@
     height: 30%;
     padding: 0;
     margin: 0;
-    margin-top: 80px;
+    margin-top: 60px;
     background: none;
   }
   .offer__bottom {
     height: 35%;
     margin: 0;
     padding: 0;
-    padding-top: 20px;
-    padding-bottom: 20px
+    padding-top: 55px;
+    padding-bottom: 20px;
   }
   .offer-mobile__title {
       display: none;
@@ -148,8 +148,8 @@
     max-width: 600px;
     margin-bottom: 30px;
     color: #fff;
-    font-size: 46px;
-    line-height: 54px;
+    font-size: 40px;
+    line-height: 48px;
     font-weight: bold;
     text-align: left;
   }
@@ -239,7 +239,7 @@
     height: 40%;
   }
   .offer__title {
-    margin-bottom: 40px;
+    margin-bottom: 25px;
   }
   .we-can {
     display: flex;
@@ -282,6 +282,11 @@
   .offer__top {
     height: 50%;
   }
+
+  .offer__title {
+    margin-bottom: 45px;
+  }
+
   .offer-mobile__title {
     display: none;
   }
