--- a/app/scss/basic.scss
+++ b/app/scss/basic.scss
@@ -6,7 +6,13 @@ body {
   color: #000;
   font-style: normal;
 }
-  
+body.no-scroll {
+   height: 100%;
+   width: 100%;
+   position: fixed;
+   overflow: hidden;
+}
+
 img {
   max-width: 100%;
   height: auto;
