--- a/app/scss/blocks/popup.scss
+++ b/app/scss/blocks/popup.scss
@@ -106,6 +106,7 @@
   width: 100%;
   height: 95%;
   padding: 5px;
+  padding-bottom: 20px;
   text-align: left;
   overflow-y: scroll;
 }
@@ -160,6 +161,7 @@ body + .policy.active {
 .agree__button:hover {
   background-color: #B01122;
 }
+
 @media (min-width: $tablet-width) {
   .policy {
     width: 90%;
@@ -169,6 +171,7 @@ body + .policy.active {
   .agree__button {
     background-color: #C50B1E;
     width: 160px;
+    margin-bottom: 0;
   }
   .popup__item .policy__title {
     font-size: 18px;
@@ -192,4 +195,23 @@ body + .policy.active {
     display: inline-block;
     margin-top: 30px;
   }
+  // .policy > .popup__close {
+  //   position: fixed;
+  //   right: 10px;
+  //   top: 10px;
+  //   background: none;
+  //   z-index: 10;
+  // }
+  // .policy > .popup__close span {
+  //   background-color: #fff;
+  // }
+  // .policy > .popup__close span:before {
+  //   background-color: #fff;
+  // }
+  // .policy > .popup__close:hover span {
+  //   background-color: #c50b1e;
+  // }
+  // .policy > .popup__close:hover span:before {
+  //   background-color: #c50b1e;
+  // }
 }
